tools/tests/errors/surf_arity_01.ki
# call user Function with too many positional args
var f = Function(a):
    return a
discard f(1, 2)
